basic functionality working

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,11 +14,13 @@
   <script src="lib/jasmine-4.0.1/boot1.js"></script>
 
   <!-- include source files here... -->
-  <script src="cardDeck.js"></script>
-  <script src="blackjack.js"></script>
+  <!--  seems like the files should be in order-->
+
+  <script src="best-books.js"></script>
 
   <!-- include spec files here... -->
-  <script src="blackjack.spec.js"></script>
+
+  <script src="best-books.spec.js"></script>
 
 </head>
 
